fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@
         p
         {
         font-size:20px;
+        width:auto;
+        height:auto;
         margin-bottom: auto;
         margin-top: auto;
         margin-left: auto;
